# ML101

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  GITHUB_PUBLISHING_GUIDE.md  MANIFEST.in  Makefile  PROJECT_STATUS.md  PUBLISHING_GUIDE.md  README.md  SECURITY.md  final_demo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  simple_demo.py
.github/workflows/: ci.yml
algorithms/decision_trees/: README.md  decision_tree.py
algorithms/kmeans/: kmeans.py
algorithms/knn/: README.md
algorithms/lasso_regression/: README.md
algorithms/linear_regression/: README.md  linear_regression.py
algorithms/logistic_regression/: logistic_regression.py
algorithms/naive_bayes/: README.md  naive_bayes.py
algorithms/pca/: README.md  pca.py
algorithms/random_forest/: README.md  random_forest.py
algorithms/svm/: README.md
docs/: README.md
docs/algorithms/: README.md  kmeans_README.md  logistic_regression_README.md  naive_bayes_README.md  ridge_regression_README.md
docs/development/: testing.md
examples/: README.md  advanced_algorithms_demo.py  classification_comparison.py  linear_regression_example.py  regularized_regression_demo.py
ml101/: __init__.py
ml101/clustering/: __init__.py
ml101/decomposition/: __init__.py
ml101/ensemble/: __init__.py  random_forest.py
ml101/linear_models/: __init__.py  lasso_regression.py  ridge_regression.py
ml101/naive_bayes/: __init__.py
ml101/neighbors/: __init__.py  knn.py
ml101/svm/: __init__.py  svm.py
ml101/tree/: __init__.py  decision_tree.py
ml101/utils/: __init__.py  metrics.py
notebooks/: ml101_tutorial.ipynb
tests/: test_algorithms.py
utils/: README.md  preprocessing.py
